Updated Summary (typos) Skills (updated skills and experience with colours to better identify Academic and Professional experience) Experience (most recent experience, Technologies in older experience, added experience sectors/areas) certifications (focus on development oriented experience)

--- a/examples/resume/certifications.tex
+++ b/examples/resume/certifications.tex
@@ -59,37 +59,37 @@
     }   
     \vspace{-0.1cm}
 %---------------------------------------------------------
-%  \cventry
-%    {Cloud-Native Development with SAP Cloud Platform* (249.1/360)} % Certificate designation
-%    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
-%    {} % Certifacion entity
-%    %{Online} % Location
-%    {} % Location
-%    %{Apr. 10, 2018 - May 30, 2018} % Date(s)      
-%    {Apr. 2018 - May 2018} % Date(s)          
-%    {
-%	    \begin{cvitems} % Description(s) of tasks/responsibilities     
-%        \item[] {Online Certificate: \url{https://open.sap.com/verify/xosen-nykel-vybup-susig-sihim}} %Certificate URL 
-%        \item[] {Valid from May 30, 2018 - Present} % Validity
-%      \end{cvitems}
-%    }   
-%    \vspace{-0.1cm}
-%---------------------------------------------------------
   \cventry
-    {Design Your First App with Build* (230.0/240)} % Certificate designation
+    {Cloud-Native Development with SAP Cloud Platform* (249.1/360)} % Certificate designation
     %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
     {} % Certifacion entity
     %{Online} % Location
     {} % Location
-    %{Oct. 4, 2017 - Nov. 9, 2017} % Date(s)      
-    {Oct. 2017 - Nov. 2017} % Date(s)      
+    %{Apr. 10, 2018 - May 30, 2018} % Date(s)      
+    {Apr. 2018 - May 2018} % Date(s)          
     {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities    
-        \item[] {Online Certificate: \url{https://open.sap.com/verify/xoban-setyz-vogaf-leryz-lufor}} %Certificate URL 
-        \item[] {Valid from Nov. 9, 2017 - Present} % Validity
+	    \begin{cvitems} % Description(s) of tasks/responsibilities     
+        \item[] {Online Certificate: \url{https://open.sap.com/verify/xosen-nykel-vybup-susig-sihim}} %Certificate URL 
+        \item[] {Valid from May 30, 2018 - Present} % Validity
       \end{cvitems}
-    }      
+    }   
     \vspace{-0.1cm}
+%---------------------------------------------------------
+%  \cventry
+%    {Design Your First App with Build* (230.0/240)} % Certificate designation
+%    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+%    {} % Certifacion entity
+%    %{Online} % Location
+%    {} % Location
+%    %{Oct. 4, 2017 - Nov. 9, 2017} % Date(s)      
+%    {Oct. 2017 - Nov. 2017} % Date(s)      
+%    {
+%	    \begin{cvitems} % Description(s) of tasks/responsibilities    
+%        \item[] {Online Certificate: \url{https://open.sap.com/verify/xoban-setyz-vogaf-leryz-lufor}} %Certificate URL 
+%        \item[] {Valid from Nov. 9, 2017 - Present} % Validity
+%      \end{cvitems}
+%    }      
+%    \vspace{-0.1cm}
 %---------------------------------------------------------
 %  \cventry
 %    {Be Visual! Sketching Basics for IT Business (70.7/80)} % Certificate designation
