--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -19,25 +19,69 @@
 
 %---------------------------------------------------------
   \cventry
-    {Support Engineer} % Job title
-    {\href{https://www.axians.pt/pt/}{Axians} \textbf{(Professional)}} % Organization
+    {.NET Developer @Finances \& Investment Sector %@Symbiotics
+    } % Job title
+    {\href{https://www.amaris.com/}{Amaris} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
-    {Aug. 2020 - Present} % Date(s)
+    {April 2021 - Present} % Date(s)
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities      	
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+      	%\item[] {\textbf{Context:} }
+		%\item[] {\textbf{Functions:} }     	
 		\item[] {\textbf{Technologies:} 
 		\textcolor{rainbowcolor-olive}{Google Chrome}, 
 		\textcolor{rainbowcolor-olive}{MS Edge}, 
-		\textcolor{rainbowcolor-olive}{Internet Explorer}, 
+		\textcolor{rainbowcolor-olive}{Internet Explorer},
+		\textcolor{rainbowcolor-olive}{Postman},
+		\textcolor{rainbowcolor-olive}{Fiddler}, 
+		\textcolor{rainbowcolor-olive}{Azure DevOps}, 
+		\textcolor{rainbowcolor-olive}{Git},    
+		\textcolor{rainbowcolor-olive}{Visual Studio 2019}, 
+		\textcolor{rainbowcolor-olive}{Visual Studio code}, 
 		%\textcolor{rainbowcolor-olive}{MS Teams}, 
 		%\textcolor{rainbowcolor-olive}{MS Office Suite}, 
+		\textcolor{rainbowcolor-indigo}{ASP .NET (Standard)/.NET core}, 
+		\textcolor{rainbowcolor-indigo}{Angular7/8}, 	
+		\textcolor{rainbowcolor-indigo}{Node.js}, 
+		\textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/JSON/XML}, 		
+		\textcolor{rainbowcolor-orange}{Windows 10}}			
+      \end{cvitems}		
+    }  
+      
+%---------------------------------------------------------
+  \cventry
+    {Support Engineer @Microsoft} % Job title
+    {\href{https://www.axians.pt/pt/}{Axians} \textbf{(Professional)}} % Organization
+    {Lisbon, Portugal} % Location
+    {Aug. 2020 - April 2021} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+      	%\item[] {\textbf{Context:} Support Engineer for Microsoft Azure. }
+		%\item[] {\textbf{Functions:} find solutions to problems with Azure Media Services and Azure Communication Services and help customers work through technical difficulties. }     	
+		\item[] {\textbf{Technologies:} 
+		\textcolor{rainbowcolor-olive}{Google Chrome}, 
+		\textcolor{rainbowcolor-olive}{MS Edge}, 
+		\textcolor{rainbowcolor-olive}{Internet Explorer},
+		\textcolor{rainbowcolor-olive}{Postman},
+		\textcolor{rainbowcolor-olive}{Fiddler}, 
+		\textcolor{rainbowcolor-olive}{Wireshark},		
+		\textcolor{rainbowcolor-olive}{Git},    
+		\textcolor{rainbowcolor-olive}{Visual Studio 2019}, 
+		\textcolor{rainbowcolor-olive}{Visual Studio code}, 
+		%\textcolor{rainbowcolor-olive}{MS Teams}, 
+		%\textcolor{rainbowcolor-olive}{MS Office Suite}, 
+		\textcolor{rainbowcolor-indigo}{ASP .NET (Standard)/.NET core}, 
+		\textcolor{rainbowcolor-indigo}{Node.js}, 
+		\textcolor{rainbowcolor-indigo}{React Native}, 
+		\textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/JSON/XML}, 		
 		\textcolor{rainbowcolor-orange}{Windows 10}}			
       \end{cvitems}		
     } 
 
 %---------------------------------------------------------
   \cventry
-    {ASP classic Developer} % Job title
+    {ASP classic Developer @Banking Sector %@Everis @Bankinter
+  } % Job title
     {\href{https://www.amaris.com/}{Amaris} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
     {June 2019 - May 2020} % Date(s)
@@ -53,14 +97,15 @@
 		\textcolor{rainbowcolor-olive}{MS SQL-Server 2005}, 
 		\textcolor{rainbowcolor-indigo}{T-SQL}, 
 		\textcolor{rainbowcolor-indigo}{ASP classic}, 
-		\textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/XML}, 
+		\textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/JSON/XML}, 
 		\textcolor{rainbowcolor-orange}{Windows 10}}		
       \end{cvitems}
     } 
     
 %---------------------------------------------------------
   \cventry
-    {Java and Oracle Database Developer} % Job title
+    {Java and Oracle Database Developer @Banking Sector %@EF tecnologias @Deutsche Bank
+    } % Job title
     {} % Organization
     {} % Location
     {Jan. 2019 - June 2019} % Date(s)
@@ -89,7 +134,8 @@
     
 %---------------------------------------------------------
   \cventry
-    {Technical Account Manager} % Job title
+    {Technical Account Manager @Contact Center Software Services Sector %@Collab
+    } % Job title
     {} % Organization
     {} % Location
     {Feb. 2018 - Dec. 2018} % Date(s)
@@ -116,7 +162,7 @@
 		\textcolor{rainbowcolor-olive}{SoapUI}, 
 		\textcolor{rainbowcolor-olive}{Zendesk}, 
 		\textcolor{rainbowcolor-olive}{PowerBI}, 
-		\textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS}, 
+%		\textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS}, 
 		\textcolor{rainbowcolor-olive}{MS SQL-server 2012-2017}, 
 		\textcolor{rainbowcolor-indigo}{T-SQL}, 
 		\textcolor{rainbowcolor-orange}{Windows 7}}		
@@ -125,7 +171,10 @@
     
 %---------------------------------------------------------
   \cventry
-    {Software Consultant} % Job title
+    {Software Consultant @Social action \& health Sector, %@Novabase @Santa Casa da Miseric\'ordia, 
+    RedIT and 
+    Energy Sector %@TEKEVER @Energias de Portugal (EDP)
+    } % Job title
     {\href{https://www.reditpro.com/}{RedIT} \textbf{(Professional)}} % Organization
     {Lisbon, Portugal} % Location
     {Jul. 2017 - Jan. 2018} 
@@ -152,8 +201,10 @@ Perfective and corrective software maintenance in the integration of an Azure AD
 		\textcolor{rainbowcolor-indigo}{C\#}, 
 		\textcolor{rainbowcolor-indigo}{T-SQL},
 		\textcolor{rainbowcolor-indigo}{PL-SQL}, 
+		\textcolor{rainbowcolor-indigo}{ASP .NET (Standard)}, 
 		\textcolor{rainbowcolor-indigo}{Angular2/4}, 
-		\textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap},
+		\textcolor{rainbowcolor-indigo}{jQuery/Ajax/Bootstrap},		
+		\textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/JSON/XML}, 
 		\textcolor{rainbowcolor-indigo}{Node.js}, 
 		\textcolor{rainbowcolor-indigo}{JavaScript}, 
 		\textcolor{rainbowcolor-orange}{Windows 7}}	
