--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -8,20 +8,6 @@
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-
-%\begin{figure}[!htb]
-%\centering
-%\includegraphics[scale=0.834]{resume/pie_charts/pie_chart_programming.pdf} 
-%%~~~~~~~~~~
-%%\includegraphics[scale=0.76]{resume/pie_charts/pie_chart_coding.pdf}
-%%~~~~~~~~~~
-%\includegraphics[scale=0.834]{resume/pie_charts/pie_chart_tools.pdf}
-%%~~~~~~~~~~
-%\includegraphics[scale=0.834]{resume/pie_charts/pie_chart_operative_systems.pdf}
-%%~~~~~~~~~~
-%%\includegraphics[scale=0.76]{resume/pie_charts/pie_chart_soft_skills.pdf}
-%\end{figure}
-
 \begin{cventries}
 
 \vspace{-0.25cm}
@@ -36,25 +22,26 @@
       \vspace{0.1cm}     
       \begin{cvitems} % Description(s)
         \item[] {
-		\textcolor{rainbowcolor-indigo}{C/C++\ref{4}{$^{[4]}$}},
-		\textcolor{rainbowcolor-indigo}{C\#\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
-		\textcolor{rainbowcolor-indigo}{Java\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
-		\textcolor{rainbowcolor-indigo}{ASP Classic\ref{5}{$^{[5]}$}},
-		%\textcolor{rainbowcolor-indigo}{Prolog\ref{2}{$^{[2]}$}},
-		%\textcolor{rainbowcolor-indigo}{OCaml\ref{2}{$^{[2]}$}},
-		\textcolor{rainbowcolor-indigo}{shell scripting\ref{4}{$^{[4]}$}},
-		\textcolor{rainbowcolor-indigo}{PL/SQL\ref{5}{$^{[5]}$}},
-		\textcolor{rainbowcolor-indigo}{T-SQL\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}},
-		\textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap\ref{5}{$^{[5]}$}},
-		\textcolor{rainbowcolor-indigo}{Angular %2/4 
-	    	\& Node.js\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-indigo}{Apache Math Commons\ref{4}{$^{[4]}$}},  
-	    \textcolor{rainbowcolor-indigo}{Apache Struts\ref{5}{$^{[5]}$}},
-	    \textcolor{rainbowcolor-indigo}{OpenGL\ref{4}{$^{[4]}$}},
-	    \textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$}},
-	    \textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{6}{$^{[6]}$}},
-	    \textcolor{rainbowcolor-indigo}{UML\ref{2}{$^{[2]}$}},
-	    \textcolor{rainbowcolor-indigo}{LaTeX\ref{4}{$^{[4]}$}}.
+		\textcolor{rainbowcolor-indigo}{C/C++\textcolor{lightgray}{\ref{4}{$^{[4]}$}}},
+		\textcolor{rainbowcolor-indigo}{C\#\textcolor{lightgray}{\ref{2}{$^{[2]}$}}\textcolor{darkgray}{\ref{6}{$^{[6]}$}}},
+		\textcolor{rainbowcolor-indigo}{Java\textcolor{lightgray}{\ref{4}{$^{[4]}$}}\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+		\textcolor{rainbowcolor-indigo}{ASP Classic/.NET (Standard)/.NET Core\textcolor{darkgray}{\ref{6}{$^{[6]}$}}},	
+		\textcolor{rainbowcolor-indigo}{React Native\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},		
+		%\textcolor{rainbowcolor-indigo}{Prolog\textcolor{lightgray}{\ref{2}{$^{[2]}$}}},
+		%\textcolor{rainbowcolor-indigo}{OCaml\textcolor{lightgray}{\ref{2}{$^{[2]}$}}},
+%		\textcolor{rainbowcolor-indigo}{shell scripting\textcolor{lightgray}{\ref{4}{$^{[4]}$}}},
+		\textcolor{rainbowcolor-indigo}{PL/SQL\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+		\textcolor{rainbowcolor-indigo}{T-SQL\textcolor{lightgray}{\ref{2}{$^{[2]}$}}\textcolor{darkgray}{\ref{6}{$^{[6]}$}}},
+		\textcolor{rainbowcolor-indigo}{Ajax/jQuery/Bootstrap\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+		\textcolor{rainbowcolor-indigo}{Angular %2/4/7/8
+	    	\& Node.js\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        \textcolor{rainbowcolor-indigo}{Apache Math Commons\textcolor{lightgray}{\ref{4}{$^{[4]}$}}},  
+	    \textcolor{rainbowcolor-indigo}{Apache Struts\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+	    \textcolor{rainbowcolor-indigo}{OpenGL\textcolor{lightgray}{\ref{4}{$^{[4]}$}}},
+	    \textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI\textcolor{lightgray}{\ref{3}{$^{[3]}$}}},
+	    \textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/JSON/XML\textcolor{lightgray}{\ref{3}{$^{[3]}$}}\textcolor{darkgray}{\ref{6}{$^{[6]}$}}},
+	    \textcolor{rainbowcolor-indigo}{UML\textcolor{lightgray}{\ref{2}{$^{[2]}$}}},
+	    \textcolor{rainbowcolor-indigo}{LaTeX\textcolor{lightgray}{\ref{4}{$^{[4]}$}}}.
 	    }
 	  \end{cvitems}
     }  
@@ -70,85 +57,58 @@
       \vspace{0.1cm}
       \begin{cvitems} % Description(s) 
         \item[] {        
-        \textcolor{rainbowcolor-olive}{Azure DevOps\ref{5}{$^{[5]}$}},         
-        \textcolor{rainbowcolor-olive}{Team Foundation Server (TFS)\ref{6}{$^{[6]}$}},
-        \textcolor{rainbowcolor-olive}{Zendesk\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{Redmine\ref{5}{$^{[5]}$}},
-        %\textcolor{rainbowcolor-olive}{Slack\ref{5}{$^{[5]}$}}, 
-        \textcolor{rainbowcolor-olive}{Git\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}}, 
-        \textcolor{rainbowcolor-olive}{SVN\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{Apache AirFlow\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{Apache Maven\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{Apache Ant\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},  
-        \textcolor{rainbowcolor-olive}{Apache Tomcat\ref{5}{$^{[5]}$}}, 
-        \textcolor{rainbowcolor-olive}{Blender\ref{2}{$^{[2]}$}}, 
-        \textcolor{rainbowcolor-olive}{JMonkeyEngine\ref{2}{$^{[2]}$}}, 
-        %\textcolor{rainbowcolor-olive}{LibreOffice\ref{4}{$^{[4]}$}}, 
-        \textcolor{rainbowcolor-olive}{Eclipse\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}},  
-        \textcolor{rainbowcolor-olive}{Netbeans\ref{4}{$^{[4]}$}}, 
-        \textcolor{rainbowcolor-olive}{Oracle SQL developer\ref{6}{$^{[6]}$}},
-        \textcolor{rainbowcolor-olive}{Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{Visual Studio Code\ref{5}{$^{[5]}$}},
-        %\textcolor{rainbowcolor-olive}{MS Office Suite\ref{6}{$^{[6]}$}},
-        \textcolor{rainbowcolor-olive}{MS SQL-server 2012-2017\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}},
-		%\textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS\ref{5}{$^{[5]}$}},
-		\textcolor{rainbowcolor-olive}{PowerBI\ref{5}{$^{[5]}$}}, 
-        %\textcolor{rainbowcolor-olive}{Skype\ref{5}{$^{[5]}$}},
-        %\textcolor{rainbowcolor-olive}{MS Teams\ref{5}{$^{[5]}$}},
-        %\textcolor{rainbowcolor-olive}{WebEx\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{Google Chrome\ref{4}{$^{[4]}$}\ref{7}{$^{[7]}$}},
-        \textcolor{rainbowcolor-olive}{MS Edge\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{Internet Explorer\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}},
-        %\textcolor{rainbowcolor-olive}{Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{SoapUI\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{Postman\ref{6}{$^{[6]}$}},
-        \textcolor{rainbowcolor-olive}{Swagger\ref{5}{$^{[5]}$}},    
-        %\textcolor{rainbowcolor-olive}{Wireshark\ref{1}{$^{[1]}$}\ref{5}{$^{[5]}$}},    
-        %\textcolor{rainbowcolor-olive}{Fiddler Everywhere\ref{5}{$^{[5]}$}},  
+        \textcolor{rainbowcolor-olive}{Azure DevOps \& Team Foundation Server (TFS)\textcolor{darkgray}{\textcolor{darkgray}{\ref{6}{$^{[6]}$}}}},
+        \textcolor{rainbowcolor-olive}{Zendesk\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        \textcolor{rainbowcolor-olive}{Redmine\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        %\textcolor{rainbowcolor-olive}{Slack\textcolor{darkgray}{\ref{5}{$^{[5]}$}}}, 
+        \textcolor{rainbowcolor-olive}{Git\textcolor{lightgray}{\ref{3}{$^{[3]}$}}\textcolor{darkgray}{\ref{5}{$^{[6]}$}}}, 
+        \textcolor{rainbowcolor-olive}{SVN\textcolor{lightgray}{\ref{2}{$^{[2]}$}}\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        \textcolor{rainbowcolor-olive}{Apache AirFlow\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        \textcolor{rainbowcolor-olive}{Apache Maven\textcolor{lightgray}{\ref{2}{$^{[2]}$}}\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        \textcolor{rainbowcolor-olive}{Apache Ant\textcolor{lightgray}{\ref{4}{$^{[4]}$}}\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},  
+        \textcolor{rainbowcolor-olive}{Apache Tomcat\textcolor{darkgray}{\ref{5}{$^{[5]}$}}}, 
+        \textcolor{rainbowcolor-olive}{Blender\textcolor{lightgray}{\ref{2}{$^{[2]}$}}}, 
+        \textcolor{rainbowcolor-olive}{JMonkeyEngine\textcolor{lightgray}{\ref{2}{$^{[2]}$}}}, 
+        %\textcolor{rainbowcolor-olive}{LibreOffice\textcolor{lightgray}{\ref{4}{$^{[4]}$}}}, 
+        \textcolor{rainbowcolor-olive}{Eclipse\textcolor{lightgray}{\ref{3}{$^{[3]}$}}\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},  
+        \textcolor{rainbowcolor-olive}{Netbeans\textcolor{lightgray}{\ref{4}{$^{[4]}$}}}, 
+        \textcolor{rainbowcolor-olive}{Oracle SQL developer\textcolor{darkgray}{\ref{6}{$^{[6]}$}}},
+        \textcolor{rainbowcolor-olive}{Visual Studio 2005-current\textcolor{lightgray}{\ref{4}{$^{[4]}$}}\textcolor{darkgray}{\ref{6}{$^{[6]}$}}},
+        \textcolor{rainbowcolor-olive}{Visual Studio Code\textcolor{darkgray}{\ref{6}{$^{[6]}$}}},
+        %\textcolor{rainbowcolor-olive}{MS Office Suite\textcolor{darkgray}{\ref{6}{$^{[6]}$}}},
+        \textcolor{rainbowcolor-olive}{MS SQL-server 2012-Current\textcolor{lightgray}{\ref{2}{$^{[2]}$}}\textcolor{darkgray}{\ref{6}{$^{[6]}$}}},
+		%\textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+		\textcolor{rainbowcolor-olive}{PowerBI\textcolor{darkgray}{\ref{5}{$^{[5]}$}}}, 
+        %\textcolor{rainbowcolor-olive}{Skype\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        %\textcolor{rainbowcolor-olive}{MS Teams\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        %\textcolor{rainbowcolor-olive}{WebEx\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        \textcolor{rainbowcolor-olive}{Google Chrome\textcolor{lightgray}{\ref{4}{$^{[4]}$}}\textcolor{darkgray}{\ref{7}{$^{[7]}$}}},
+        \textcolor{rainbowcolor-olive}{MS Edge\textcolor{darkgray}{\ref{5}{$^{[6]}$}}},
+        \textcolor{rainbowcolor-olive}{Internet Explorer\textcolor{lightgray}{\ref{4}{$^{[4]}$}}\textcolor{darkgray}{\ref{6}{$^{[6]}$}}},
+        %\textcolor{rainbowcolor-olive}{Teamviewer\textcolor{lightgray}{\ref{4}{$^{[4]}$}}\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        \textcolor{rainbowcolor-olive}{SoapUI\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        \textcolor{rainbowcolor-olive}{Postman\textcolor{darkgray}{\ref{6}{$^{[6]}$}}},
+        \textcolor{rainbowcolor-olive}{Swagger\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},    
+        \textcolor{rainbowcolor-olive}{Wireshark\textcolor{lightgray}{\ref{1}{$^{[1]}$}}\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},    
+        \textcolor{rainbowcolor-olive}{Fiddler\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},  
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
-        %\textbf{WhatsApp}\ref{5}{$^{[5]}$}
-        %\textbf{Slack}\ref{5}{$^{[5]}$}
-        %\textbf{UmbreloUML}\ref{2}{$^{[2]}$},
-        %\textbf{Omnet++}\ref{2}{$^{[2]}$},
+        %\textbf{WhatsApp}\textcolor{darkgray}{\ref{5}{$^{[5]}$}}
+        %\textbf{Slack}\textcolor{darkgray}{\ref{5}{$^{[5]}$}}
+        %\textbf{UmbreloUML}\textcolor{lightgray}{\ref{2}{$^{[2]}$}},
+        %\textbf{Omnet++}\textcolor{lightgray}{\ref{2}{$^{[2]}$}},
         %\textbf{Android Studio},
-        \textcolor{rainbowcolor-olive}{IIS 6-8\ref{5}{$^{[5]}$}}.%,
-        %\textcolor{rainbowcolor-olive}{VNC\ref{5}{$^{[5]}$}},
-        %\textcolor{rainbowcolor-olive}{mRemote\ref{5}{$^{[5]}$}},
-        %\textcolor{rainbowcolor-olive}{Cisco AnyConnect\ref{5}{$^{[5]}$}}, 
-        %\textcolor{rainbowcolor-olive}{Cisco VPN client\ref{5}{$^{[5]}$}}, 
-		%\textcolor{rainbowcolor-olive}{FortiClient\ref{5}{$^{[5]}$}}.
+        \textcolor{rainbowcolor-olive}{IIS 6-8\textcolor{darkgray}{\ref{5}{$^{[5]}$}}}.%,
+        %\textcolor{rainbowcolor-olive}{VNC\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        %\textcolor{rainbowcolor-olive}{mRemote\textcolor{darkgray}{\ref{5}{$^{[5]}$}}},
+        %\textcolor{rainbowcolor-olive}{Cisco AnyConnect\textcolor{darkgray}{\ref{5}{$^{[5]}$}}}, 
+        %\textcolor{rainbowcolor-olive}{Cisco VPN client\textcolor{darkgray}{\ref{5}{$^{[5]}$}}}, 
+		%\textcolor{rainbowcolor-olive}{FortiClient\textcolor{darkgray}{\ref{5}{$^{[5]}$}}}.
 		}
       \end{cvitems}
     }  
   %\vspace{-0.4cm}  
-    
-%---------------------------------------------------------
-%  \cventry
-%    {General Coding/Algorithms:} % title
-%    {} 
-%    {} 
-%    {} 
-%    {      
-%      \begin{cvitems} % Description(s)
-%        \item {Game Engines, Motion Planners, Computational Physics (fluids), Parallel/Grid/Cloud Computing, HCI.}        
-%      \end{cvitems}
-%    }  
-%  \vspace{-0.4cm}  
-%    
-%---------------------------------------------------------
-%  \cventry
-%    {Soft skills (x/100\%):} % title
-%    {} 
-%    {} 
-%    {} 
-%    {
-%      \begin{cvitems} % Description(s)
-%        \item {Commun. (25), Team Work \& Collaboration (15), Prob. Solving (20), Critical Observ. (18), Adapt. (12), Conflict Resol. (10).}        
-%      \end{cvitems}
-%    }  
-%  \vspace{-0.4cm} 
-%    
+      
 %---------------------------------------------------------
   \cventry
     {Operating Systems Usage:} % title
@@ -159,24 +119,17 @@
       \vspace{0.1cm}
       \begin{cvitems} % Description(s)
         \item[] {
-        \textcolor{rainbowcolor-orange}{MS Windows 2003-2016 server, XP - 10\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}}, 
+        \textcolor{rainbowcolor-orange}{MS Windows 2003-Current server, XP to 10\textcolor{lightgray}{\ref{4}{$^{[4]}$}}\textcolor{darkgray}{\ref{7}{$^{[7]}$}}}, 
         \textcolor{rainbowcolor-orange}{Linux% (Ubuntu, Mint, Fedora, and OpenSuse)
-\ref{4}{$^{[4]}$}}%,
-        %Android\ref{8}{$^{[8]}$} 
-        %iOS\ref{6}{$^{[6]}$}
-        %\textcolor{rainbowcolor-orange}{CiscoIOS\ref{5}{$^{[5]}$}}.
+\textcolor{lightgray}{\ref{4}{$^{[4]}$}}\textcolor{darkgray}{\ref{5}{$^{[5]}$}}}%,
+        %Android\textcolor{darkgray}{\ref{8}{$^{[8]}$}} 
+        %iOS\textcolor{darkgray}{\ref{6}{$^{[6]}$}}
+        %\textcolor{rainbowcolor-orange}{CiscoIOS\textcolor{darkgray}{\ref{5}{$^{[5]}$}}}.
         .} 
       \end{cvitems}
     }  
   \vspace{-0.6cm} 
     
-
-%---------------------------------------------------------
-% 			>1				1-2 				  		3-5 				5+
-%AC  \ref{1}{$^{[1]}$}   \ref{2}{$^{[2]}$}   \ref{3}{$^{[3]}$}   \ref{4}{$^{[4]}$}
-%PER \ref{5}{$^{[5]}$} 	  \ref{6}{$^{[6]}$}   \ref{7}{$^{[7]}$}   \ref{8}{$^{[8]}$}
-%PRO \ref{9}{$^{[9]}$} 	  \ref{10}{$^{[10]}$} \ref{11}{$^{[11]}$} \ref{12}{$^{[12]}$}
-%TRA \ref{13}{$^{[13]}$} \ref{14}{$^{[14]}$} \ref{15}{$^{[15]}$} \ref{4}{$^{[16]}$}            
 
 %---------------------------------------------------------
   \cventry
@@ -186,15 +139,9 @@
     {} 
     {
       \begin{cvitems} % Description(s)
-        \item[]{\textbf{Academic}: \label{1}{<1 Yr$^{[1]}$}, \label{2}{1 - 2 Yrs$^{[2]}$}, \label{3}{3 - 5 Yrs$^{[3]}$}, \label{4}{5+ Yrs$^{[4]}$}%}
-		%\item[]{
+        \item[]{\textbf{Academic}: \textcolor{lightgray}{\label{1}{<1 Yr$^{[1]}$}, \label{2}{1 - 2 Yrs$^{[2]}$}, \label{3}{3 - 5 Yrs$^{[3]}$}, \label{4}{5+ Yrs$^{[4]}$}}%}
 		\hspace{2.2cm}
-%		\textbf{Personal Use}: \label{5}{$^{[5]}$>1 Yr}, \label{6}{$^{[6]}$1 - 2 Yrs}, \label{7}{$^{[7]}$3 - 5 Yrs}, \label{8}{$^{[8]}$ 5+ Yrs}}
-%		\item[]{\textbf{Professional}: \label{9}{$^{[9]}$>1 Yr}, \label{10}{$^{[10]}$1 - 2 Yrs}, \label{11}{$^{[11]}$3 - 5 Yrs}, \label{12}{$^{[12]}$ 5+ Yrs}}
-		\textbf{Professional}: \label{5}{<1 Yr$^{[5]}$}, \label{6}{1 - 2 Yrs$^{[6]}$}, \label{7}{3 - 5 Yrs$^{[7]}$}, \label{8}{5+ Yrs$^{[8]}$}}		
-		%\item[]{
-%		\hspace{0.5cm}
-%		\textbf{Training}: \label{13}{$^{[13]}$>1 Yr}, \label{14}{$^{[14]}$1 - 2 Yrs}, \label{15}{$^{[15]}$3 - 5 Yrs}, \label{16}{$^{[16]}$ 5+ Yrs}}
+		\textbf{Professional}: \textcolor{darkgray}{\label{5}{<1 Yr$^{[5]}$}, \label{6}{1 - 2 Yrs$^{[6]}$}, \label{7}{3 - 5 Yrs$^{[7]}$}, \label{8}{5+ Yrs$^{[8]}$}}}		
       \end{cvitems}
     }  
   \vspace{0.2cm} 
